Foundation Training/4.4-policy-e2e-workflow-lab/dnpolicy/lab_manifests/4.4-allow-docker-com-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: whitelist.allow-docker-com
spec:
  tier: whitelist
  order: 1200
  selector: app == "open-centos"
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports:
          - '80'
          - '443'
        domains:
          - www.docker.com
  types:
    - Egress
